# ML-Zoomcamp-2025-Midterm-Project

./: Dockerfile  README.md  fly.toml  notebook.ipynb  notebook_main.ipynb  predict.py  pyproject.toml  service.py  train.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  notebook-checkpoint.ipynb
